# SynAnalizer

./: .gitignore  CMakeLists.txt  Config.h.in  README.md
include/: Analyzer.h  Codes.h  Grammar.h  Visualize.h
src/: Analizer.cpp  Analyzer.cpp  Codes.h  Grammar.h  Visualize.cpp  lexer.l  main.cpp
test/: test_SynAnalyzer.cpp  test_input.txt  test_main.cpp
tests/: test_SynAnalyzer.cpp  test_input.txt
